--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@adminjs/express": "^5.1.0",
     "@adminjs/typeorm": "^4.0.0",
     "@aws-sdk/client-s3": "^3.282.0",
+    "@ethersproject/keccak256": "^5.7.0",
     "@types/node": "^18.14.5",
     "adminjs": "^6.8.7",
     "bcrypt": "^5.1.0",
     "connect-busboy": "^1.0.0",
     "csv-parser": "^3.0.0",
+    "merkletreejs": "^0.3.10",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
