--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "@types/node": "^18.14.5",
     "adminjs": "^6.8.7",
     "bcrypt": "^5.1.0",
-    "connect-busboy": "^1.0.0",
     "csv-parser": "^3.0.0",
-    "multer": "^1.4.3",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
