--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.14.5",
     "adminjs": "^6.8.7",
     "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
